fixing strange flicker bug

--- a/src/sass/directives/_album.sass
+++ b/src/sass/directives/_album.sass
@@ -2,7 +2,7 @@
   +clearfix
   display: block
   position: relative
-  margin: 0px 60px
+  margin: 0px 10px
   background: $dark-grey-color
   border-bottom: 1px solid lighten($dark-grey-color, 25%)
   box-shadow: 0px -1px 1px darken($dark-grey-color, 25%) 
@@ -22,7 +22,7 @@
     display: block
 
   &:first-child
-    margin: 0px 60px
+    margin: 0px 10px
 
     &:before
       display: none
