--- a/src/sass/directives/_track.sass
+++ b/src/sass/directives/_track.sass
@@ -1,5 +1,4 @@
 .track
-  +transition(all 400ms ease)
   position: relative
   height: 100%
   margin: 0
@@ -53,6 +52,7 @@
 
         &:after
           +background-image(linear-gradient(left, transparent, rgba(0,0,0,0.5), transparent))
+          +transition(opacity 500ms ease)
           content: ''
           display: block
           position: absolute
@@ -60,11 +60,10 @@
           left: 0px
           width: 100%
           height: 1px 
+          opacity: 0.0
 
     .actions
-      +transition(all 500ms ease)
       position: relative
-      opacity: 0.0
       margin: 0 auto
       padding: 2px 0
       z-index: 1
@@ -72,25 +71,28 @@
 
       button
         +transition(all 800ms ease)
+        -webkit-backface-visibility: hidden
         background: lighten($page-color, 5%)
+        opacity: 0.0
         border-radius: 3px
         padding: 4px 10px
         margin: -30px auto 0px
+        position: relative
         display: block
         box-sizing: content-box
 
   &:hover, &.playing
-    padding: 25px 10px
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.2), inset 0px 1px rgba(255,255,255,0.3), inset 0px -1px rgba(255,255,255,0.3)
-
     .actions
-      opacity: 1.0
       button
-        padding: 8px 10px 4px
         margin: -10px auto 0px
+        opacity: 1.0
+
+    .track-title
+      .title
+        &:after, &:before
+          opacity: 1.0
 
   &.playing
-
     .actions
       display: block
     
