--- a/src/sass/var/_mixins.scss
+++ b/src/sass/var/_mixins.scss
@@ -15,3 +15,8 @@
   );
   background-size: 5px 5px;
 }
+
+
+@mixin no-flick {
+  -webkit-transform-style: preserve-3d;
+}
